    hermes::update()':
    ./siduxcc_hermes/hermes.cpp:110: error: cannot convert 'console*' to
    'QWidget*' in initialization

  [ Fabian Wuertz ]
  * console.* moved form siduxcc_kde to libsiduxcc
  * hermes enlarged part 1/2
  * hermes enlarged part 2/2
  * hermes: unique mode for right click
  * siduxcc: software: language bug in function updateHermes fixed

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 20 Nov 2007 01:17:52 +0100

siduxcc (0.6.10) unstable; urgency=low

  * siduxcc-kde: start: switch language menuitem added
  * siduxcc-kde: kernel: show new kernels bug fixed
  * siduxcc-kde: "too small window" bug solved
  * siduxcc-kde: po: it activated 

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 19 Nov 2007 18:09:23 +0100

siduxcc (0.6.9) unstable; urgency=low

  * siduxcc_kde: start: Menubar added
  * siduxcc_kde: start: startpage designed
  * polish languages files added

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 18 Nov 2007 21:50:58 +0100

siduxcc (0.6.8) unstable; urgency=low

  * siduxcc_kde: kernel: console bug fixed

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 07 Nov 2007 10:32:41 -0500

siduxcc (0.6.7) unstable; urgency=low

  * siduxcc icon changed 

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 04 Nov 2007 17:26:19 -0500

siduxcc (0.6.6) unstable; urgency=low

  * typos fixed
  * siduxcc-kde: start: menulock added
  * siduxcc icon changed

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 04 Nov 2007 16:45:05 -0500

siduxcc (0.6.5) unstable; urgency=low

  [ Fabian Wuertz ]
  * siduxcc-hermes: ugradable packages problem fixed
  * siduxcc-kde: network: netcardconfig functions included
  * siduxcc-hermes: ugradable packages problem fixed again 

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 01 Nov 2007 17:45:46 -0400

siduxcc (0.6.4) unstable; urgency=low

  * fix URL to sidux.com.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 28 Oct 2007 16:08:16 +0100

siduxcc (0.6.3) unstable; urgency=low
