@@ -1,6 +1,5 @@
 noinst_LTLIBRARIES = libsiduxcc.la
-noinst_HEADERS = console.h
-libsiduxcc_la_SOURCES = process.cpp console.cpp consoledialog.ui
+libsiduxcc_la_SOURCES = process.cpp
 
 libsiduxcc_la_LDFLAGS  = $(all_libraries) -module -avoid-version -no-undefined
 libsiduxcc_la_LIBADD = @LIBOBJS@ 
