@@ -4,6 +4,7 @@ AM_CPPFLAGS = $(all_includes)
 # these are the headers for your project
 noinst_HEADERS = \
 	start.h     \
+	console.h   \
 	display.h   \
 	network.h   \
 	services.h  \
@@ -20,6 +21,7 @@ KDE_ICON = AUTO
 # the application source, library search path, and link libraries
 siduxcc_kde_SOURCES = \
 	main.cpp \
+	console.cpp   consoledialog.ui   \
 	start.cpp     startdialog.ui     \
 	display.cpp   displaydialog.ui   \
 	network.cpp   networkdialog.ui   \
